@@ -1,5 +1,12 @@
 2009-05-13 Braden McDaniel  <braden@endoframe.com>
 
+	* src/openvrml-player/curlbrowserhost.cpp
+	(openvrml_player_curl_browser_host_curl_source_callback(gpointer)):
+	Make sure NewStream gets called before calling DestroyStream in
+	cases where no data was written to the stream.
+
+2009-05-13 Braden McDaniel  <braden@endoframe.com>
+
 	* src/node/vrml97/image_texture.cpp
 	(image_texture_node::update_texture()): Make sure the stream is
 	valid before reading it.
